--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
 
     implementation("androidx.constraintlayout:constraintlayout-compose-android:1.1.1")
     implementation("androidx.compose.foundation:foundation:1.8.3")
-    implementation("io.coil-kt.coil3:coil-compose:3.3.0")
+    implementation("io.coil-kt:coil-compose:2.2.2")
     implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.9.2")
     implementation("androidx.navigation:navigation-common:2.9.3")
 
